# microscope

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
resources/: Info.plist.in
scripts/: convert_models.py  create_dmg.sh  package_models.sh
src/: camera.h  camera.mm  coreml_model.h  coreml_model.mm  display.h  display.mm  image_utils.cpp  image_utils.h  main.cpp  main.mm  pipeline.cpp  pipeline.h  tokenizer.cpp  tokenizer.h
